Fixed bug where fixed ratio columns where not working on mobile

--- a/fluidable.less
+++ b/fluidable.less
@@ -1,5 +1,5 @@
 /*!
- * Fluidable Grid System 1.2
+ * Fluidable Grid System 1.2.1
  *
  * Creator: Andri Sigurðsson
  * Site: http://fluidable.com
@@ -33,6 +33,11 @@
 	Mobile and up
  
 */
+
+.col-group [class*="col-fixed-"] {
+  float: left;
+  width: 100%;
+}
 
 .col-group {
 	.clear();
